--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Hero Section -->
   <section class="bg-gradient-to-r from-pink-500 to-red-500 text-white">
     <div class="max-w-7xl mx-auto px-6 py-20 text-center">
-      <h1 class="text-4xl md:text-6xl font-bold mb-4">RosaBloom</h1>
+      <h1 class="text-4xl md:text-6xl font-bold mb-4">Ratih Nofita Sary</h1>
       <p class="text-xl md:text-2xl mb-6">Mawar Segar & Elegan Langsung dari Kebun Kami</p>
       <a href="#produk" class="bg-white text-pink-600 px-6 py-3 rounded-full font-semibold hover:bg-pink-100 transition">Lihat Koleksi</a>
     </div>
