--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h2 class="text-3xl font-bold mb-10">Produk Unggulan</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
         <div class="bg-white shadow-md rounded-lg p-6">
-          <img src="https://source.unsplash.com/400x300/?red-rose" class="rounded-md mb-4" alt="Red Rose">
+          <img src="IMG_6243.png" class="rounded-md mb-4" alt="Red Rose">
           <h3 class="font-semibold text-lg">Mawar Merah</h3>
           <p class="text-sm text-gray-500">Simbol cinta dan keberanian.</p>
         </div>
